--- a/image-pages/a-forest.html
+++ b/image-pages/a-forest.html
@@ -54,7 +54,7 @@
 
     <header class="page-header banner-pages">
         <div class="container">
-            <h1>Formidible digital bricolage</h1>
+            <h1>digital bricollage</h1>
             <p class="tagline">new work for the 4K age</p>
         </div>
     </header>
@@ -143,6 +143,33 @@
             document.getElementById('lb-img').src = src;
             document.getElementById('lightbox').style.display = 'flex';
         }
+
+        // Responsive image switching for detail pages
+        function updateDetailImage() {
+            const detailImage = document.querySelector('.nft-image-wrap img');
+            if (!detailImage) return;
+            
+            const isTabletOrMobile = window.innerWidth <= 1280;
+            const src = detailImage.src;
+            const filename = src.substring(src.lastIndexOf('/') + 1);
+            const basename = filename.replace(/-[23]\.jpg$/, '');
+            
+            if (isTabletOrMobile) {
+                // Use -2 images from main folder
+                const newSrc = `../images/main/${basename}-2.jpg`;
+                detailImage.src = newSrc;
+                detailImage.setAttribute('onclick', `openLB('${newSrc}')`);
+            } else {
+                // Use -3 images from full folder
+                const newSrc = `../images/full/${basename}-3.jpg`;
+                detailImage.src = newSrc;
+                detailImage.setAttribute('onclick', `openLB('${newSrc}')`);
+            }
+        }
+
+        // Run on load and resize
+        updateDetailImage();
+        window.addEventListener('resize', updateDetailImage);
     </script>
 
     <footer class="footer">
