fix mobile again

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&family=Droid+Sans:wght@400;700&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .nav-links a.active {
+            color: var(--accent);
+        }
+    </style>
 </head>
 <body>
 
@@ -21,38 +26,8 @@
                 <span></span>
             </button>
             <ul class="nav-links">
-                <li><a href="index.html">Gallery</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle">Images</a>
-                    <div class="dropdown-menu">
-                        <a href="image-pages/a-forest.html">a forest</a>
-                        <a href="image-pages/blue-redux.html">Blue Redux</a>
-                        <a href="image-pages/moving-on.html">moving on</a>
-                        <a href="image-pages/cloud-background.html">Cloud background</a>
-                        <a href="image-pages/a-quiet-escape.html">a quiet escape</a>
-                        <a href="image-pages/cowboy-in-the-woods.html">Cowboy in the woods</a>
-                        <a href="image-pages/cowgirl-in-the-sand.html">Cowgirl in the sand</a>
-                        <a href="image-pages/fight-or-flight.html">fight or flight</a>
-                        <a href="image-pages/golden-desire.html">Golden Desire</a>
-                        <a href="image-pages/in-the-land-of-green-and-red.html">in the land of green and red</a>
-                        <a href="image-pages/in-the-land-of-indecisions.html">in the land of indecisions</a>
-                        <a href="image-pages/in-the-land-of-make-believe.html">in the land of make believe</a>
-                        <a href="image-pages/in-the-land-of-pink-and-grey.html">in the land of pink and grey</a>
-                        <a href="image-pages/like-father-like-son.html">Like Father, Like Son</a>
-                        <a href="image-pages/the-dollar-is-our-king.html">The dollar is our king</a>
-                        <a href="image-pages/kline-again.html">Kline again</a>
-                        <a href="image-pages/vulture-values.html">vulture values</a>
-                        <a href="image-pages/all-american.html">All American</a>
-                        <a href="image-pages/by-my-side.html">by my side</a>
-                        <a href="image-pages/everything-you-want-me-to.html">everything you want me to</a>
-                        <a href="image-pages/ease-my-worried-mind.html">ease my worried mind</a>
-                        <a href="image-pages/thunderhead-melody.html">Thunderhead Melody</a>
-                        <a href="image-pages/red-room.html">Red room</a>
-                        <a href="image-pages/make-room.html">Make room</a>
-                    </div>
-                </li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class="active">gallery</a> <span style="color: var(--rule);">|</span> <a href="image-pages/a-forest.html">start</a></li>
+                <li><a href="about.html">about</a> <span style="color: var(--rule);">|</span> <a href="contact.html">contact</a></li>
             </ul>
         </div>
     </nav>
@@ -64,13 +39,6 @@
         </div>
     </header>
 
-  <!--  <section class="hero">
-        <div class="container">
-            <div class="logo">RUSS NFT</div>
-            <h1>Unlocking the Potential</h1>
-            <p class="tagline">new work for the 4K age</p>
-        </div>
-    </section>-->
 
     <main class="container">
         <section class="gallery">
@@ -242,28 +210,18 @@
         // Mobile menu toggle
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
-        const dropdown = document.querySelector('.dropdown');
-        const dropdownToggle = document.querySelector('.dropdown-toggle');
 
         hamburger.addEventListener('click', () => {
             hamburger.classList.toggle('active');
             navLinks.classList.toggle('active');
         });
 
-        // Close menu when clicking a link (except dropdown toggle)
-        navLinks.querySelectorAll('a:not(.dropdown-toggle)').forEach(link => {
+        // Close menu when clicking a link
+        navLinks.querySelectorAll('a').forEach(link => {
             link.addEventListener('click', () => {
                 hamburger.classList.remove('active');
                 navLinks.classList.remove('active');
             });
-        });
-
-        // Mobile dropdown toggle
-        dropdownToggle.addEventListener('click', (e) => {
-            if (window.innerWidth <= 768) {
-                e.preventDefault();
-                dropdown.classList.toggle('active');
-            }
         });
     </script>
 </body>
