--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get in touch with russNFT for inquiries about digital artwork, NFT purchases, commissions, or collaborations. Connect with RVL and explore opportunities.">
+    <meta name="keywords" content="contact NFT artist, commission digital art, NFT purchase inquiry, digital art collaboration, reach Russell artist, art commission request, NFT artist contact, digital artwork inquiry">
     <title>Contact | russNFT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -124,28 +126,18 @@
         // Mobile menu toggle
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
-        const dropdown = document.querySelector('.dropdown');
-        const dropdownToggle = document.querySelector('.dropdown-toggle');
 
         hamburger.addEventListener('click', () => {
             hamburger.classList.toggle('active');
             navLinks.classList.toggle('active');
         });
 
-        // Close menu when clicking a link (except dropdown toggle)
-        navLinks.querySelectorAll('a:not(.dropdown-toggle)').forEach(link => {
+        // Close menu when clicking a link
+        navLinks.querySelectorAll('a').forEach(link => {
             link.addEventListener('click', () => {
                 hamburger.classList.remove('active');
                 navLinks.classList.remove('active');
             });
-        });
-
-        // Mobile dropdown toggle
-        dropdownToggle.addEventListener('click', (e) => {
-            if (window.innerWidth <= 768) {
-                e.preventDefault();
-                dropdown.classList.toggle('active');
-            }
         });
     </script>
 
