--- a/image-pages/a-forest.html
+++ b/image-pages/a-forest.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layered digital forest abstraction blending atmosphere, symbolism, and quiet psychological depth. A contemplative RVL composition for modern collectors.">
+    <meta name="keywords" content="digital forest collage, abstract woodland art, symbolic nature imagery, atmospheric greens, RVL digital art">
     <title>a forest - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
