--- a/image-pages/a-quiet-escape.html
+++ b/image-pages/a-quiet-escape.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>a quiet escape — RVL Digital Artwork</title>
     <meta name="description" content="A quiet escape into soft color fields and drifting forms, offering a moment of stillness and emotional release within a subtly constructed digital landscape.">
-    <meta name="keywords" content="quiet escape, soft color fields, stillness, emotional release, digital landscape, RVL digital art">
+    <meta name="keywords" content="quiet digital collage, soft color fields, emotional stillness art, atmospheric abstraction, RVL digital art">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
