--- a/image-pages/all-american.html
+++ b/image-pages/all-american.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layered digital portrait of American identity, blending cultural symbols, emotional nuance, and textured collage to explore belonging and contradiction.">
+    <meta name="keywords" content="American identity art, cultural symbolism, layered portrait, emotional nuance, RVL digital art">
     <title>All American - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
