--- a/image-pages/by-my-side.html
+++ b/image-pages/by-my-side.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A tender digital composition about presence and connection, using soft textures and symbolic forms to evoke companionship, memory, and emotional grounding.">
+    <meta name="keywords" content="companionship art, emotional grounding, soft digital textures, symbolic connection, RVL digital art">
     <title>by my side - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
