--- a/image-pages/everything-you-want-me-to.html
+++ b/image-pages/everything-you-want-me-to.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A digital exploration of expectation and identity, layering symbolic elements to reveal the tension between self-expression and external demands.">
+    <meta name="keywords" content="identity tension, expectation symbolism, layered digital collage, emotional conflict, RVL digital art">
     <title>everything you want me to - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
