--- a/image-pages/fight-or-flight.html
+++ b/image-pages/fight-or-flight.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A charged digital composition exploring instinct, tension, and emotional velocity through layered forms, symbolic contrasts, and atmospheric fragmentation.">
+    <meta name="keywords" content="instinct symbolism, emotional tension art, fragmented abstraction, dynamic digital collage, RVL digital art">
     <title>fight or flight - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
