--- a/image-pages/in-the-land-of-green-and-red.html
+++ b/image-pages/in-the-land-of-green-and-red.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A vivid digital landscape where green and red collide in symbolic tension, creating a world of emotional contrast, layered meaning, and chromatic energy.">
+    <meta name="keywords" content="green and red art, chromatic tension, symbolic landscape, emotional contrast, RVL digital art">
     <title>in the land of green and red - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
