--- a/image-pages/make-room.html
+++ b/image-pages/make-room.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A digital study of expansion and possibility, using layered forms and symbolic openings to explore the emotional act of creating space for change.">
+    <meta name="keywords" content="expansion symbolism, emotional possibility, layered openings, digital abstraction, RVL digital art">
     <title>Make room - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
