--- a/image-pages/red-room.html
+++ b/image-pages/red-room.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A bold digital interior built from red tonalities and symbolic tension, exploring emotion, memory, and psychological heat within a confined visual space.">
+    <meta name="keywords" content="red tonal art, psychological interior, symbolic tension, emotional heat, RVL digital art">
     <title>Red room - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
