--- a/image-pages/the-dollar-is-our-king.html
+++ b/image-pages/the-dollar-is-our-king.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A sharp, symbolic commentary on value and power, blending digital textures and cultural cues to examine the emotional and societal weight of money.">
+    <meta name="keywords" content="value symbolism, cultural critique art, money commentary, layered digital textures, RVL digital art">
     <title>The dollar is our king - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
