--- a/image-pages/thunderhead-melody.html
+++ b/image-pages/thunderhead-melody.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A storm-charged digital composition where thunderhead forms become musical, blending atmospheric drama with rhythmic layering and emotional resonance.">
+    <meta name="keywords" content="storm symbolism, thunderhead art, rhythmic digital collage, atmospheric drama, RVL digital art">
     <title>Thunderhead Melody - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
