--- a/image-pages/vulture-values.html
+++ b/image-pages/vulture-values.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A striking digital critique of predatory value systems, merging symbolic imagery and layered textures to explore consumption, scarcity, and moral tension.">
+    <meta name="keywords" content="predatory symbolism, value critique art, vulture imagery, moral tension, RVL digital art">
     <title>vulture values - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
