--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore the russNFT 4K digital art gallery featuring abstract collages, symbolic landscapes, and contemporary digital artwork by RVL. High-resolution NFT artwork optimized for modern displays.">
+    <meta name="keywords" content="NFT gallery, 4K digital art, abstract collage, digital art collection, RVL artist, contemporary NFT art, high-resolution artwork, digital art portfolio, modern digital gallery, NFT marketplace">
     <title>russNFT | 4K Gallery</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
