--- a/image-page-template.html
+++ b/image-page-template.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="[REPLACE WITH ARTWORK DESCRIPTION] - A unique digital collage by RVL exploring [THEMES]. High-resolution NFT artwork for modern collectors.">
+    <meta name="keywords" content="[REPLACE WITH RELEVANT KEYWORDS], digital art, abstract collage, NFT artwork, RVL digital art">
     <title>new image template</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
