--- a/image-pages/ease-my-worried-mind.html
+++ b/image-pages/ease-my-worried-mind.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A calming digital collage shaped by soft gradients and symbolic forms, offering a visual exhale for moments of anxiety, longing, and emotional release.">
+    <meta name="keywords" content="calming digital art, soft gradients, emotional release, symbolic comfort, RVL digital art">
     <title>ease my worried mind - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
