--- a/image-pages/golden-desire.html
+++ b/image-pages/golden-desire.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A radiant digital collage built around gold tones and symbolic longing, capturing the pull between aspiration, temptation, and luminous emotional depth.">
+    <meta name="keywords" content="gold tonal art, symbolic longing, radiant digital collage, emotional abstraction, RVL digital art">
     <title>golden desire - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
