--- a/image-pages/in-the-land-of-indecisions.html
+++ b/image-pages/in-the-land-of-indecisions.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A contemplative digital environment shaped by ambiguity and shifting choices, blending layered textures to evoke the emotional terrain of indecision.">
+    <meta name="keywords" content="ambiguity art, emotional indecision, layered digital textures, contemplative abstraction, RVL digital art">
     <title>in the land of indecisions - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
