--- a/image-pages/in-the-land-of-make-believe.html
+++ b/image-pages/in-the-land-of-make-believe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A dreamlike digital world built from symbolic fragments and playful illusions, inviting viewers into a space where imagination reshapes emotional reality.">
+    <meta name="keywords" content="dreamlike collage, symbolic fragments, imaginative digital art, playful abstraction, RVL digital art">
     <title>in the land of make believe - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
