--- a/image-pages/in-the-land-of-pink-and-grey.html
+++ b/image-pages/in-the-land-of-pink-and-grey.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A soft yet complex digital landscape balancing pink warmth and grey restraint, exploring emotional duality through layered textures and symbolic color play.">
+    <meta name="keywords" content="pink and grey art, emotional duality, soft digital landscape, symbolic color study, RVL digital art">
     <title>in the land of pink and grey - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
