--- a/image-pages/kline-again.html
+++ b/image-pages/kline-again.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A bold digital homage to gestural abstraction, reinterpreting Kline-like energy through layered forms, stark contrasts, and contemporary symbolic tension.">
+    <meta name="keywords" content="gestural abstraction, Kline homage, bold digital forms, stark contrasts, RVL digital art">
     <title>Kline again - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
