--- a/image-pages/like-father-like-son.html
+++ b/image-pages/like-father-like-son.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A generational reflection rendered in digital collage, exploring inheritance, identity, and emotional echoes between father and son through symbolic layering.">
+    <meta name="keywords" content="generational art, identity symbolism, father and son, layered digital collage, RVL digital art">
     <title>Like Father, Like Son - digital collage by RUSSNFT</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
