still not working

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
             <div class="footer-section"> 
                 <h4>Connect</h4>
                 <ul>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Discord</a></li>
+                    <li><a href="https://www.instagram.com/mtartist2012">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/rvlfineart">Facebook</a></li>
+                    <li><a href="https://www.rvlfineart.com/favorites">Purchase Prints</a></li>
                 </ul>
             </div>
         </div>
