--- a/image-pages/a-forest.html
+++ b/image-pages/a-forest.html
@@ -11,6 +11,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&family=Droid+Sans:wght@400;700&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <style>
+        @media (max-width: 768px) {
+            .nft-image-wrapper {
+                margin-top: 1rem;
+            }
+        }
+    </style>
+</head>
 <body>
 
     <nav class="navbar">
