--- a/image-pages/a-forest.html
+++ b/image-pages/a-forest.html
@@ -71,6 +71,9 @@
                     <div class="nft-description">
                         <p>${nft.desc}</p>
                     </div>
+
+                    nftavailablity      
+            
                     
                     <!-- FIX #1: Image after text for mobile reading flow -->
                     <div class="nft-image-wrapper" 
