add gallery description

--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
         </div>
     </nav>
 
-        <header class="page-header banner-index">
+    <header class="page-header banner-index">
         <div class="container">
             <h1>Unlocking the Potential</h1>
             <p class="tagline">new work for the 4K age</p>
         </div>
     </header>
+
+    <div class="index-description">
+        <div class="container">
+            <p>This collection brings together decades of studio practice with a new digital vocabulary. Each piece is built from layered observation, memory, and symbolic structure, then refined through a contemporary lens that values clarity, rhythm, and intention. These works are designed for collectors who appreciate both the craft of image-making and the evolving language of digital art.
+        </div>
+    </div>
 
 
     <main class="container">
